<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 xmlns:tools="http://schemas.android.com/tools"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent"
											 tools:context="net.paddlefish.lemonadestand.HelloFragment">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/out_of_money_title"
		android:id="@+id/appNameTextView"
		android:layout_below="@+id/imageView"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="27dp"
		android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/out_of_money_you_lose"
		android:id="@+id/beatHighScoreTextView"
		android:layout_below="@+id/imageView"
		android:layout_marginTop="80dp"
		android:layout_marginEnd="@dimen/activity_horizontal_margin"
		android:layout_marginStart="@dimen/activity_horizontal_margin"
		android:gravity="center_horizontal"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

	<Button
		android:text="@string/play_again_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/playAgainButton"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="@dimen/activity_vertical_margin"/>

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:srcCompat="@drawable/empty_glass"
		android:contentDescription="@string/app_name"
		android:id="@+id/imageView"
		android:layout_marginTop="31dp"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"/>
	<!-- Note we cannot use onClick attribute if we want the message handling to go through
	the fragment because Android will look for the onClick method only in the current Activity -->

</RelativeLayout>
