<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 xmlns:tools="http://schemas.android.com/tools"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent"
											 tools:context="net.paddlefish.lemonadestand.HelloFragment">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/big_dollar_sign"
		android:id="@+id/bigDollarSign"
		android:textSize="96sp"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginStart="16dp"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginTop="80dp"
		app:layout_constraintTop_toTopOf="parent"/>

	<TextView
		android:layout_height="54dp"
		android:layout_width="226dp"
		android:text="@string/make_more_money"
		android:id="@+id/beatHighScoreTextView"
		android:layout_marginStart="16dp"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="40dp"
		app:layout_constraintTop_toBottomOf="@+id/bigDollarSign"
		android:lines="2"
		android:gravity="center_horizontal"/>

	<Button
		android:text="@string/go_shopping"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/goShoppingButton"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_marginBottom="16dp"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginStart="16dp"
		app:layout_constraintLeft_toLeftOf="parent"/>
	<!-- Note we cannot use onClick attribute if we want the message handling to go through
	the fragment because Android will look for the onClick method only in the current Activity -->

</android.support.constraint.ConstraintLayout>
