<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 xmlns:tools="http://schemas.android.com/tools"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent"
											 tools:context="net.paddlefish.lemonadestand.HelloFragment">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/done_selling_title"
		android:id="@+id/doneSellingTitle"
		android:textSize="32sp"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginStart="16dp"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginTop="72dp"
		app:layout_constraintTop_toTopOf="parent"
		android:textAlignment="center"/>

	<TextView
		android:layout_height="132dp"
		android:layout_width="233dp"
		android:text="@string/done_selling_details"
		android:id="@+id/doneSellingDetails"
		android:layout_marginStart="16dp"
		app:layout_constraintLeft_toLeftOf="parent"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="40dp"
		app:layout_constraintTop_toBottomOf="@+id/doneSellingTitle"
		android:lines="6"
		android:gravity="center_horizontal"
		android:textAlignment="center"/>

	<Button
		android:text="@string/done_selling_rest_up_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/doneSellingButton"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_marginBottom="16dp"
		android:layout_marginEnd="16dp"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginStart="16dp"
		app:layout_constraintLeft_toLeftOf="parent"/>
	<!-- Note we cannot use onClick attribute if we want the message handling to go through
	the fragment because Android will look for the onClick method only in the current Activity -->

</android.support.constraint.ConstraintLayout>
